--- a/LPCopiers/LPCopiers.csproj
+++ b/LPCopiers/LPCopiers.csproj
@@ -187,18 +187,13 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\adminController.cs" />
-    <Compile Include="Controllers\CustomerController.cs" />
-    <Compile Include="Controllers\CustomersMenuController.cs" />
-    <Compile Include="Controllers\EngineerController.cs" />
-    <Compile Include="Controllers\EngineersMenuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\CustomerModel.cs" />
-    <Compile Include="Models\Engineer.cs" />
+    <Compile Include="Models\Manufacture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -326,19 +321,13 @@
     <Content Include="Views\Shared\_FooterPartial.cshtml" />
     <Content Include="Views\extra\adminHome.cshtml" />
     <Content Include="Views\admin\Index.cshtml" />
-    <Content Include="Views\Customers\Index.cshtml" />
-    <Content Include="Views\Engineers\Index.cshtml" />
     <Content Include="Views\Home\Services.cshtml" />
     <Content Include="Views\Engineer\Index.cshtml" />
     <Content Include="Views\Engineer\Details.cshtml" />
     <Content Include="Views\Engineer\Create.cshtml" />
     <Content Include="Views\Engineer\Edit.cshtml" />
     <Content Include="Views\Engineer\Delete.cshtml" />
-    <Content Include="Views\Customer\Index.cshtml" />
-    <Content Include="Views\Customer\Details.cshtml" />
-    <Content Include="Views\Customer\Create.cshtml" />
-    <Content Include="Views\Customer\Edit.cshtml" />
-    <Content Include="Views\Customer\Delete.cshtml" />
+    <Content Include="Views\Home\Manufacturers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
