--- a/LPCopiers/LPCopiers.csproj
+++ b/LPCopiers/LPCopiers.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Manufacture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -322,11 +323,6 @@
     <Content Include="Views\extra\adminHome.cshtml" />
     <Content Include="Views\admin\Index.cshtml" />
     <Content Include="Views\Home\Services.cshtml" />
-    <Content Include="Views\Engineer\Index.cshtml" />
-    <Content Include="Views\Engineer\Details.cshtml" />
-    <Content Include="Views\Engineer\Create.cshtml" />
-    <Content Include="Views\Engineer\Edit.cshtml" />
-    <Content Include="Views\Engineer\Delete.cshtml" />
     <Content Include="Views\Home\Manufacturers.cshtml" />
   </ItemGroup>
   <ItemGroup>
