--- a/LPCopiers/Web.config
+++ b/LPCopiers/Web.config
@@ -11,8 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-LPCopiers-20140206211721;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-LPCopiers-20140206211721.mdf"
       providerName="System.Data.SqlClient" />
-    <add name ="MainContext" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=True;User Instance=True;AttachDbFilename=|DataDirectory|\engineers.mdf" providerName="System.Data.SqlClient"/>
-  
+    <add name="MainContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\engineers.mdf;Integrated Security=True;User Instance=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
