Added Manufacturers partial view and added if check

--- a/LPCopiers/LPCopiers.csproj
+++ b/LPCopiers/LPCopiers.csproj
@@ -332,6 +332,7 @@
     <Content Include="Views\admin\Index.cshtml" />
     <Content Include="Views\Home\Services.cshtml" />
     <Content Include="Views\Home\Manufacturers.cshtml" />
+    <Content Include="Views\Shared\_ManuForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201403221330483_UserProfiles.resx">
