--- a/LPCopiers/Web.config
+++ b/LPCopiers/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MainContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\engineers.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
+    <!-- Used for local testing-->
+    <add name="MainContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\engineers.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" /><!--
+    <add name="MainContext" connectionString="Data Source=tcp:jdm0f5o0hu.database.windows.net,1433;Initial Catalog=lpcopieASJbTEde3;User Id=lpcopiersadmin@jdm0f5o0hu;Password=Jackn1k20130;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -91,7 +93,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
