--- a/LPCopiers/Web.config
+++ b/LPCopiers/Web.config
@@ -9,10 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!-- Used for local testing-->
-    <add name="MainContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\engineers.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" /><!--
-    <add name="MainContext" connectionString="Data Source=tcp:jdm0f5o0hu.database.windows.net,1433;Initial Catalog=lpcopieASJbTEde3;User Id=lpcopiersadmin@jdm0f5o0hu;Password=Jackn1k20130;" providerName="System.Data.SqlClient" />-->
+    <!-- Used for local testing
+    <add name="MainContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\engineers.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />-->
+    <add name="MainContext" connectionString="Data Source=tcp:jdm0f5o0hu.database.windows.net,1433;Initial Catalog=lpcopieASJbTEde3;User Id=lpcopiersadmin@jdm0f5o0hu;Password=Jackn1k20130;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -24,6 +25,7 @@
     <add key="MvcSiteMapProvider_IncludeAssembliesForScan" value="LPCopiers" />
   </appSettings>
   <system.web>
+    <globalization culture="en-GB" />
     <roleManager enabled="true" defaultProvider="SimpleRoleProvider">
       <providers>
         <clear />
